--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
       <!-- Section for Mars Hemispheres -->
       <div class="row" id="mars-hemispheres">
         <div class="page-header">
-          <h2 class="text-center" style="color: whitesmoke;"><strong>Mars Hemispheres</strong></h2>
+          <h2 class="text-center" style="color: navy;"><strong>Mars Hemispheres</strong></h2>
         </div>
 
         {% for hemisphere in mars.hemispheres %}
